--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         <div class="navbar">
             <div class="container">
                 <div class="logo">
-                    <a href="kaorn.html">
+                    <a href="https://ahmedsamir01.github.io/Kaorn/">
                         <h2>ka<span>o</span>rn</h2>
                     </a>
                 </div>
                     <ul>
-                        <li><a class="active" href="Kaorn.html">home</a></li>
+                        <li><a class="active" href="https://ahmedsamir01.github.io/Kaorn/">home</a></li>
                         <li><a href="#About">about</a></li>
                         <li><a href="#Offers">Offers</a></li>
                         <li><a href="#Booking">Book</a></li>
