--- a/index.html
+++ b/index.html
@@ -1,174 +1,233 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
-<html lang='en'>
-    <head>
-        <meta charset="UTF-8">
-        <title>Kaorn</title>
-        <link rel="stylesheet" href="css/normalize.css" />
-        <link rel="stylesheet" href="css/kaorn.css" />
-    </head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Kaorn</title>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/kaorn.css" />
+  </head>
 
-    <body>
-        <div class="header">
-            <div class="slider" style="background-image: url(pics/we.jpg)">
-                <div class="container">
-                    <div class="intro">
-                        <div class="ani">
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                        </div>
-                        <h2>kaorn</h2>
-                        <div class="bni">
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
-                        </div>
-                   </div>
-               </div>
+  <body>
+    <div class="header">
+      <div class="slider" style="background-image: url(pics/we.jpg)">
+        <div class="container">
+          <div class="intro">
+            <div class="ani">
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
             </div>
-        </div>
-        <div class="navbar">
-            <div class="container">
-                <div class="logo">
-                    <a href="https://ahmedsamir01.github.io/Kaorn/">
-                        <h2>ka<span>o</span>rn</h2>
-                    </a>
-                </div>
-                    <ul>
-                        <li><a class="active" href="https://ahmedsamir01.github.io/Kaorn/">home</a></li>
-                        <li><a href="#About">about</a></li>
-                        <li><a href="#Offers">Offers</a></li>
-                        <li><a href="#Booking">Book</a></li>
-                        <li><a href="contact.htm">contact</a></li>
-                   </ul>
+            <h2>kaorn</h2>
+            <div class="bni">
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
+              <span>.</span>
             </div>
+          </div>
         </div>
-        <div class="features">
-            <div class="container">
-                <div class=qes><h2>WHY CHOOSE US?</h2><br><hr><br></div>
-                <div class="cont">
-                <div>
-                    <h2>safety</h2>
-                    <p>Global Offensive is an objective-based multiplayer first-person shooter</p>
-                </div>
-                <div>
-                    <h2>comfort</h2>
-                    <p>Global Offensive is an objective-based multiplayer first-person shooter</p>
-                </div>
-                <div>
-                    <h2>relaxation</h2>
-                    <p>Global Offensive is an objective-based multiplayer first-person shooter</p>
-                </div>
-                <div>
-                    <h2>economic</h2>
-                    <p>Global Offensive is an objective-based multiplayer first-person shooter</p>
-                </div>
-                </div>
+      </div>
+    </div>
+    <div class="navbar">
+      <div class="container">
+        <div class="logo">
+          <a href="https://ahmedsamir01.github.io/Kaorn/">
+            <h2>ka<span>o</span>rn</h2>
+          </a>
+        </div>
+        <ul>
+          <li>
+            <a class="active" href="https://ahmedsamir01.github.io/Kaorn/"
+              >home</a
+            >
+          </li>
+          <li><a href="#About">about</a></li>
+          <li><a href="#Offers">Offers</a></li>
+          <li><a href="#Booking">Book</a></li>
+          <li><a href="contact.htm">contact</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="features">
+      <div class="container">
+        <div class="qes">
+          <h2>WHY CHOOSE US?</h2>
+          <br />
+          <hr />
+          <br />
+        </div>
+        <div class="cont">
+          <div>
+            <h2>safety</h2>
+            <p>
+              Global Offensive is an objective-based multiplayer first-person
+              shooter
+            </p>
+          </div>
+          <div>
+            <h2>comfort</h2>
+            <p>
+              Global Offensive is an objective-based multiplayer first-person
+              shooter
+            </p>
+          </div>
+          <div>
+            <h2>relaxation</h2>
+            <p>
+              Global Offensive is an objective-based multiplayer first-person
+              shooter
+            </p>
+          </div>
+          <div>
+            <h2>economic</h2>
+            <p>
+              Global Offensive is an objective-based multiplayer first-person
+              shooter
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="history" id="About">
+      <div class="container">
+        <div class="para">
+          <h2>About</h2>
+          <hr />
+          <br />
+          <p>
+            Global Offensive (abbreviated as CS:GO) is an online first-person
+            shooter developed by Valve Corporation and Hidden Path
+            Entertainment. Like the previous games in the series, Global
+            Offensive is an objective-based multiplayer first-person shooter.
+            Each player joins either the Terrorist or Counter-Terrorist team and
+            attempts to complete objectives or eliminate the
+            enemyCounter-Terrorist team and attempts to complete objectives or
+            eliminate the enemy team.<br /><br />
+            The game operates in short rounds that end when all players on one
+            side are dead or a team's objective is completed.Each player joins
+            either the Terrorist or Counter-Terrorist team and attempts to
+            complete objectives or eliminate the enemy team Counter-Terrorist
+            team and attempts to complete objectives or eliminate the enemy team
+            complete objectives or eliminate the enemy team complete objectives
+            or game.
+          </p>
+        </div>
+        <div class="pic">
+          <img src="pics/he.jpg" alt="old" />
+        </div>
+      </div>
+    </div>
+    <div class="offers" id="Offers">
+      <div class="container">
+        <h2>offers!</h2>
+        <hr />
+        <div class="er">
+          <a href="europ.html"
+            ><div class="img" style="background-image: url(pics/one.jpg)"></div>
+            <div class="words">
+              <span class="ba">europ</span>
+              <h2>offer 30%</h2>
             </div>
-        </div>
-        <div class="history" id="About">
-            <div class="container">
-                <div class="para">
-                    <H2>About</H2><hr><br>
-                    <p>Global Offensive (abbreviated as CS:GO) is an online first-person shooter developed by Valve Corporation and Hidden Path Entertainment.
-    Like the previous games in the series, Global Offensive is an objective-based multiplayer first-person shooter.
-    Each player joins either the Terrorist or Counter-Terrorist team and attempts to complete objectives or eliminate the enemyCounter-Terrorist team and attempts to complete objectives or eliminate the enemy team.<br><br>
-    The game operates in short rounds that end when all players on one side are dead or a team's objective is completed.Each player joins either the Terrorist or Counter-Terrorist team and attempts to complete objectives or eliminate the enemy team Counter-Terrorist team and attempts to complete objectives or eliminate the enemy team complete objectives or eliminate the enemy team complete objectives or game.</p>
-                </div>
-                <div class="pic">
-                    <img src="pics/he.jpg" alt="old" />
-                </div>
+          </a>
+          <a href="maldives.html"
+            ><div
+              class="img"
+              style="background-image: url(pics/three.jpg)"
+            ></div>
+            <div class="words">
+              <span>maldives</span>
+              <h2>offer 15%</h2>
             </div>
-        </div>
-        <div class="offers" id="Offers">
-            <div class="container">
-                <h2>offers!</h2><hr>
-                <div class="er">
-                <a href="italy.html"><div class="img" style="background-image: url(pics/two.jpg) "></div>
-                    <div class="words">
-                        <span class="da">italy</span>
-                        <h2>offer 60%</h2>
-                    </div>
-                </a>
-                <a href="europ.html"><div class="img" style="background-image: url(pics/one.jpg) "></div>
-                    <div class="words">
-                        <span class="ba">europ</span>
-                        <h2>offer 30%</h2>
-                    </div>
-                </a>
-                <a href="maldives.html"><div class="img" style="background-image: url(pics/three.jpg) "></div>
-                    <div class="words">
-                        <span>maldives</span>
-                        <h2>offer 15%</h2>
-                    </div>
-                </a>
-                </div>
+          </a>
+          <a href="italy.html"
+            ><div class="img" style="background-image: url(pics/two.jpg)"></div>
+            <div class="words">
+              <span class="da">italy</span>
+              <h2>offer 60%</h2>
             </div>
+          </a>
         </div>
-        <div class="booking" id="Booking">
-            <div class="container">
-                <div class="mo">
-                    <div class="info">
-                        <span>Book now!</span><br><hr>
-                    </div>
-                    <form action="#" method="post">
-                        <input type="text" class="first" required="required" placeholder="First name"/><input type="text" class="second" required="required" placeholder="Surname"><br>
-                        <input type="text" class="third" required="required" placeholder="Mobile number or email address"><br>
-                        <select>
-                            <option value="place">Place</option>
-                        </select><br>
-                        <select>
-                            <option value="period">Period</option>
-                        </select>
-                        <input type="submit" value="Book">
-                    </form>
-                </div>
-            </div>
+      </div>
+    </div>
+    <div class="booking" id="Booking">
+      <div class="container">
+        <div class="mo">
+          <div class="info">
+            <span>Book now!</span><br />
+            <hr />
+          </div>
+          <form>
+            <input
+              type="text"
+              class="first"
+              required="required"
+              placeholder="First name"
+            /><input
+              type="text"
+              class="second"
+              required="required"
+              placeholder="Surname"
+            /><br />
+            <input
+              type="text"
+              class="third"
+              required="required"
+              placeholder="Mobile number or email address"
+            /><br />
+            <select>
+              <option value="place">Place</option></select
+            ><br />
+            <select>
+              <option value="period">Period</option>
+            </select>
+            <input type="submit" value="Book" />
+          </form>
         </div>
-        <div class="elements">
-            <div class="container">
-                <hr><br>
-                <div class="lang">
-                    <span><a href="#">English (UK)</a></span>
-                    <span><a href="#">Francais</a></span>
-                    <span><a href="#">Italiano</a></span>
-                    <span><a href="#">Deutsch</a></span>
-                    <span><a href="#">Espaniol</a></span>
-                    <span><a href="#">Turkish</a></span>
-                </div>
-                <span>Samir &copy; 2018</span>
-            </div>
+      </div>
+    </div>
+    <div class="elements">
+      <div class="container">
+        <hr />
+        <br />
+        <div class="lang">
+          <span><a href="#">English (UK)</a></span>
+          <span><a href="#">Francais</a></span>
+          <span><a href="#">Italiano</a></span>
+          <span><a href="#">Deutsch</a></span>
+          <span><a href="#">Espaniol</a></span>
+          <span><a href="#">Turkish</a></span>
         </div>
-    </body>
-
+        <span>Samir &copy; 2018</span>
+      </div>
+    </div>
+  </body>
 </html>
